--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
+@import "tailwindcss";
+@import "flowbite/src/themes/default";
+@plugin "flowbite/plugin";
+@source "../node_modules/flowbite";
+
 /* You can add global styles to this file, and also import other style files */
