--- a/src/app/courses/pages/course-detail/course-detail.component.html
+++ b/src/app/courses/pages/course-detail/course-detail.component.html
@@ -1,5 +1,5 @@
 <div class="grid content-center justify-items-center">
-  <h1 class="text-4xl font-bold mb-5 text-gray-400 mt-2">Profesor</h1>
+  <h1 class="text-4xl font-bold mb-5 text-gray-400 mt-2">Materia</h1>
 </div>
 <hr />
 
@@ -40,9 +40,9 @@
 
     <div class="pb-5">
       <label
-        for="lastName"
+        for="credits"
         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-        >Apellido</label
+        >Creditos</label
       >
       <div class="flex">
         <span
@@ -51,17 +51,17 @@
           <i class="fas fa-address-card"></i>
         </span>
         <input
-          formControlName="lastName"
+          formControlName="credits"
           autocomplete="off"
           type="text"
-          id="lastName"
+          id="credits"
           class="rounded-none rounded-e-lg bg-gray-50 border text-gray-900 focus:ring-blue-500 focus:border-blue-500 block flex-1 min-w-0 w-full text-sm border-gray-300 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
           placeholder="Apellido completo"
         />
       </div>
-      @if ( formUtils.isValidField(myForm, 'lastName')){
+      @if ( formUtils.isValidField(myForm, 'credits')){
       <p class="mt-2 text-sm text-red-600 dark:text-red-500">
-        {{ formUtils.getFieldError(myForm, "lastName") }}
+        {{ formUtils.getFieldError(myForm, "credits") }}
       </p>
       }
     </div>
