--- a/src/app/courses/pages/courses-list/courses-list.component.html
+++ b/src/app/courses/pages/courses-list/courses-list.component.html
@@ -1,10 +1,10 @@
 <div class="flex flex-row">
   <div class="basis-4/5 content-center justify-items-center">
-    <h1 class="text-4xl font-bold mb-5 text-gray-400 mt-2">Profesores</h1>
+    <h1 class="text-4xl font-bold mb-5 text-gray-400 mt-2">Materias</h1>
   </div>
   <div class="basis-1/5 content-center flex justify-end">
     <button
-      routerLink="/layout/professor/detail"
+      routerLink="/layout/course/detail"
       class="cursor-pointer focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 me-3 my-3 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
     >
       Nuevo
@@ -23,21 +23,21 @@
     >
       <tr>
         <th scope="col" class="px-6 py-3">Nombre</th>
-        <th scope="col" class="px-6 py-3">Apellido</th>
+        <th scope="col" class="px-6 py-3">Creditos</th>
         <th scope="col" class="px-6 py-3 text-right"></th>
       </tr>
     </thead>
     <tbody>
-      @for (item of professors(); track item.id) {
+      @for (item of courses(); track item.id) {
       <tr
         class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
       >
         <td class="px-6 py-4">{{ item.name }}</td>
-        <td class="px-6 py-4">{{ item.lastName }}</td>
+        <td class="px-6 py-4">{{ item.credits }}</td>
         <td class="px-6 py-4 text-right">
           <div class="inline-flex rounded-md shadow-xs" role="group">
             <button
-              [routerLink]="['/layout/professor/detail', item.id]"
+              [routerLink]="['/layout/course/detail', item.id]"
               type="button"
               class="cursor-pointer inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-s-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-yellow-800 dark:focus:ring-yellow-500 dark:focus:text-white"
             >
